:bug: remove horizontal scrollbar

--- a/src/frontend/styles/components/experience-overview.scss
+++ b/src/frontend/styles/components/experience-overview.scss
@@ -21,7 +21,7 @@
 .experience-overview {
 	background-color: $ColorThird;
 
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	overflow-y: scroll;
 	overflow-x: hidden;
